# MemoryLane

./: .gitignore  BRANDING.md  claude.md  index.html  package-lock.json  package.json  tailwind.config.js
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: db-init-failure.md  missing-window-controls.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  llama.rs  main.rs
src-tauri/src/migrations/: 001_initial.sql
src/components/: AppShell.tsx  BubbleMenuBar.tsx  CalendarCell.tsx  CalendarView.tsx  DatePicker.tsx  DaySeparator.tsx  DeleteEntryDialog.tsx  EmbeddedAISetup.tsx  EmptyState.tsx  EntryEditor.tsx  EntryList.tsx  EntryListItem.tsx  JournalView.tsx  MetadataBar.tsx  MoodOverview.tsx  MoodSelector.tsx  OllamaSetupWizard.tsx  OnThisDay.tsx  OverviewView.tsx  PhotoAttachmentButton.tsx  PhotoGallery.tsx  PinEntryScreen.tsx  PinSetupScreen.tsx  QuickActions.tsx  QuickWriteFAB.tsx  SearchFilterBar.tsx  SearchView.tsx  SettingRow.tsx  SettingsView.tsx  Sidebar.tsx  StatCard.tsx  TagAutocomplete.tsx  TagInput.tsx  TagPill.tsx  TagPillReadOnly.tsx  TagRow.tsx  TagSuggestButton.tsx  TimelineCard.tsx  TimelineView.tsx  TitleBar.tsx
src/hooks/: useDataExport.ts  useExportFile.ts  useGlobalShortcuts.ts  useIdleTimeout.ts  usePhotoManagement.ts
src/lib/: db.ts  dbQueries.ts  (+6 more)
(+181 files in other folders)
